# Adv-Games-Programming-Techniques

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
asset/: map.tmx
asset/animations/: rooster.xml
src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector.cpp  Vector.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  KeyboardInputSystem.h  MovementSystem.h  RenderSystem.h  SpawnTimerSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  Scene.cpp  Scene.h  SceneManager.h
src/utils/: Collision.cpp  Collision.h  Vector.cpp
